--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <link rel="stylesheet" href="./assets/css/screen.css?v=23c118cee3" />
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <script src="//cdn.bootcss.com/jquery/3.1.1/jquery.js"></script>
     <script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.js"></script>
     <script src="//cdn.bootcss.com/angular.js/1.5.9/angular.js"></script>
@@ -7,8 +9,11 @@
     <script src="//cdn.bootcss.com/angular.js/1.5.9/angular-cookies.js"></script>
     <script src="./javascript/app/app.js"></script>
     <script src="./javascript/app/services/api.js"></script>
+    <script src="./javascript/app/services/user.js"></script>
     <script src="./javascript/app/components/mainDirective.js"></script>
     <script src="./javascript/app/components/content/userinfoDirective.js"></script>
+    <script src="./javascript/app/components/content/loginDirective.js"></script>
+    <script src="./javascript/app/components/content/registerDirective.js"></script>
   </head>
   <body ng-app="EasyMemoApp">
     <div ng-include="'./javascript/app/components/mainView.html'">
