--- a/static/index.html
+++ b/static/index.html
@@ -2,12 +2,16 @@
   <head>
     <link rel="stylesheet" href="./assets/css/screen.css?v=23c118cee3" />
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <script src="//cdn.bootcss.com/jquery/3.1.1/jquery.js"></script>
-    <script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.js"></script>
-    <script src="//cdn.bootcss.com/angular.js/1.5.9/angular.js"></script>
-    <script src="//cdn.bootcss.com/angular.js/1.5.9/angular-route.js"></script>
-    <script src="//cdn.bootcss.com/angular.js/1.5.9/angular-cookies.js"></script>
+    <script src="https://cdn.bootcss.com/crypto-js/3.1.9/crypto-js.min.js"></script>
+    <script src="https://cdn.bootcss.com/crypto-js/3.1.9/hmac-sha256.min.js"></script>
+    <script src="https://cdn.bootcss.com/crypto-js/3.1.9/aes.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.js"></script>
+    <script src="https://cdn.bootcss.com/angular.js/1.5.9/angular.js"></script>
+    <script src="https://cdn.bootcss.com/angular.js/1.5.9/angular-route.js"></script>
+    <script src="https://cdn.bootcss.com/angular.js/1.5.9/angular-cookies.js"></script>
     <script src="./javascript/app/app.js"></script>
+    <script src="./javascript/app/services/crypto.js"></script>
     <script src="./javascript/app/services/api.js"></script>
     <script src="./javascript/app/services/user.js"></script>
     <script src="./javascript/app/components/mainDirective.js"></script>
